--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>索引</title>
-        <meta charsset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale"></div>
-    </head>
-    <body>
+
+<head>
+    <title>索引</title>
+    <meta charsset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale">
+    </div>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        h1 {
+            font-size: 2rem;
+            border-bottom: 1px solid rgb(110, 110, 110);
+        }
+        div.container {
+            max-width:900px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
         <h1>索引页</h1>
         <ul>
             <li><a href="/C_iteration.md">C语言迭代程序设计</a></li>
             <li><a href="/C_program.md">C语言题目</a></li>
         </ul>
-    </body>
+
+    </div>
+
+</body>
+
 </html>
