--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
         }
         div.container {
             max-width:900px;
+            margin:0 auto;
         }
+        a {
+            text-decoration:none;
+        }
+        a:link{
+            color:#fff;
+        }
+        a:hover{
+            color:#d62048;
+            
+        }
+
     </style>
 </head>
 
