--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
         }
         #home {
-            max-width: 1366px;
+            max-width: 1024px;
             margin: 0 auto;
         }
     </style>
@@ -18,10 +18,7 @@
     <div id="home">
         <h1>索引页</h1>
         <hr />
-        <ul>
-            <li><a href="./C_iteration.md">C语言迭代程序设计</a></li>
-            <li><a href="./C_program.md">C语言题目</a></li>
-        </ul>
+        <p>本站仅用于测试</p>
     </div>
     
 </body>
