--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1>索引页</h1>
         <hr />
         <p>本站仅用于测试</p>
+        <img src="https://s1.ax1x.com/2020/03/21/8hOUXR.jpg" alt="测试图片" />
     </div>
     
 </body>
